--- a/index.html
+++ b/index.html
@@ -17,22 +17,22 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am a Senior Graphic Designer with over 12 years of experience. I recently ventured into full stack development to further my career in digital marketing.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I'm originally from Fort Worth, TX.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>I love to sketch and paint when I'm not digitally creating art.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Full stack web developer for an agency.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Fort Worth and commute to Dallas.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>I just have a love for creating things, and troubleshooting code.</p>
     </section>
 
     <footer id="footer">
         <ul class="social">
-          <li><a href="http://www.github.com/usernamehere">Github</a></li>
+          <li><a href="http://www.github.com/susieotto">Github</a></li>
         </ul>
     </footer>
 </body>
